--- a/app/views/hosts/index.html.haml
+++ b/app/views/hosts/index.html.haml
@@ -4,17 +4,16 @@
   %table.table
     %tr
       %th Name
-      -#%th Hostgroup
       %th IP
       %th Domain Name
       %th Use IP
-    - @hosts.each do |host|
+    - @hosts_arr.each do |host|
       %tr
-        %td= link_to host.name, host_path(host)
-        -#%td= host.group ? Hostgroup.find(host.group).name : 'No team assigned'
-        %td= host.ip
-        %td= host.dns
-        %td= host.useip?
+        %td= link_to host[:name], host_path(host[:host_obj]) if host[:host_obj]
+        %td= host[:ip]
+        %td= host[:dns]
+        %td= host[:useip]
+
   %hr
   %div{:align => "right"}
     = link_to 'Add host', new_host_path, class: 'btn btn-success'
