--- a/app/views/hosts/show.html.haml
+++ b/app/views/hosts/show.html.haml
@@ -2,36 +2,40 @@
   %table.table
     %tr
       %th Name
-      -#%th Hostgroup
+      %th ID
+      %th Hostgroup Name
+      %th Hostgroup ID
+      %th Template Name
+      %th Template ID
       %th IP
       %th Domain Name
+      %th Port
       %th Use IP
-      %th Host added at
     %tr
-      %td= @host.name
-      -#%td= @host.group ? Hostgroup.find(host.group).name : 'No hostgroup assigned'
-      %td= @host.ip
-      %td= @host.dns
-      %td= @host.useip?
-      %td= @host.created_at
+      %td= @host[:name]
+      %td= @host[:id]
+      %td= @host[:template_name] ? @host[:template_name] : 'No template assigned'
+      %td= @host[:template_id] ? @host[:template_id] : 'No template assigned'
+      %td= @host[:hostgroup_name] ? @host[:hostgroup_name] : 'No hostgroup assigned'
+      %td= @host[:hostgroup_id] ? @host[:hostgroup_id] : 'No hostgroup assigned'
+      %td= @host[:ip]
+      %td= @host[:dns]
+      %td= @host[:port]
+      - if @host[:useip] == "1"
+        %td= "Yes"
+      - else
+        %td= "No"
 
   %br/
-  %p.lead= "Host debug info:"
-  %pre.code= @host_info_output
+  %p.lead= "Host graphs with debug info:"
   %hr
-  %br/
-  %p.lead= "Host graphs debug info:"
-  %pre.code= @host_graphs_output
-  %hr
-  %br/
-  - @host_graphs_output.each do |e|
+  - @host_graphs_output.each do |g|
+    %p.lead= "#{g['name']} graph:"
+    %img(src="/images/graph_#{g['graphid']}.png")
     %br/
-    %p.lead= "#{e['name']} graph:"
-    -#=image_tag "graph_#{e['graphid']}.png"
-    %img(src="/images/graph_#{e['graphid']}.png")
+    %br/
+    %pre.code= g
     %hr
-
-
 
   %div{:align => "right"}
     = link_to 'Go back', :back, class: 'btn btn-primary'
