--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,20 +1,23 @@
 .container
   %h2
-    %b Users
+    %b Internal Users
   %table.table
     %tr
       %th Email
       %th First Name
       %th Last Name
       %th Team
-      %th Admin
+      %th Demo Admin
+      %th Synced with Zabbix
     - @users.each do |user|
       %tr
         %td= link_to user.email, user_path(user)
         %td= user.first_name
         %td= user.last_name
         %td= user.team_id ? Team.find(user.team_id).name : 'No team assigned'
-        %td= user.admin?
+        %td= user.admin ? 'Yes' : 'No'
+        - @usermedia_arr.each do |um|
+          %td= um["sendto"] == user.email ? 'Yes' : 'No'
   %hr
   %div{:align => "right"}
     = link_to 'Add user', new_user_path, class: 'btn btn-success'
