--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,5 +1,6 @@
 .container
-  %p.lead= "Add user"
+  %h2
+    %b Add User
   %hr
   = simple_form_for @user do |f|
     = f.error_notification
@@ -9,9 +10,10 @@
       = f.input :last_name, label_html: { class: 'my_class' }
       = f.input :password, hint: false, error_html: { id: 'password_error'}
       = f.input :password_confirmation, label: false
+      = f.input :type_id, :as => :select, collection: @types, :label_method => :name, :value_method => :id, :label => "Type", :selected => 1
       = f.input :team_id, :as => :select, collection: @teams, :selected => '111'
       %div{:align => "right"}
-        %b Admin
+        %b Demo Admin
         = f.input_field :admin, as: :boolean, boolean_style: :inline
     .form-actions
       = link_to 'Go back', :back, class: 'btn btn-primary'
