--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,16 +7,19 @@
       %th First Name
       %th Last Name
       %th Team
+      %th Type
       %th Demo Admin
       %th Synced with Zabbix
     %tr
-      %td= link_to @user.email, user_path(@user)
+      %td= @user.email
       %td= @user.first_name
       %td= @user.last_name
       %td= @user.team_id ? Team.find(@user.team_id).name : 'No team assigned'
+      - @zbx_users_arr.each do |u|
+        - @user_type = u["type"] if u["name"] == @user.first_name and u["surname"] == @user.last_name
+      %td= @types.detect {|type| type["id"] == @user_type.to_i}.name if @user_type and !@user_type.empty?
       %td= @user.admin ? 'Yes' : 'No'
-      - @usermedia_arr.each do |um|
-        %td= um["sendto"] == @user.email ? 'Yes' : 'No'
+      %td= @useremails_arr.include?(@user.email) ? 'Yes' : 'No'
   %hr
   %div{:align => "right"}
     = "Member since #{l @user.created_at.to_date, format: :short}"
