--- a/app/views/hosts/edit.html.haml
+++ b/app/views/hosts/edit.html.haml
@@ -1,5 +1,5 @@
 .container
-  %p.lead= "Edit user"
+  %p.lead= "Edit host"
   %hr
   = form_tag("/hosts/#{params[:id]}", method: "patch") do
     .form-group
