--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
               - if current_user.admin?
                 = menu_link 'Users', users_path
                 = menu_link 'Teams', teams_path
+              = menu_link 'Actions', actions_path
               = menu_link 'Hosts', hosts_path
               = menu_link 'Log out', destroy_user_session_path, false, method: :delete
               %li
