--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,6 +23,7 @@
                 = menu_link 'Teams', teams_path
               = menu_link 'Actions', actions_path
               = menu_link 'Hosts', hosts_path
+              = menu_link 'Apps', apps_path
               = menu_link 'Websites', websites_path
               = menu_link 'Log out', destroy_user_session_path, false, method: :delete
               %li
